2006-06-20  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayState.py (modify_statusbar): Only calc relationship
	of active person if active person is set
	* src/DataViews/_PedigreeView.py: Support for family editing;
	Change line style for child relation "birth"; Properly redraw if
	active person is set to None

2006-06-19  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/_WinMime.py: Get application description from registry

2006-06-19  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: handle unsetting of rows changing
	the active person when the model is rebuilt.
	* src/DataViews/_Relationship.py: handle person set to None
	* src/ViewManger.py: try tabs on the side
	* src/DisplayTabs/_PersonRefEmbedList.py: change Relationships to
	Associations
	* src/help/C/*: updates

2006-06-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Bootstrap resize handling using
	"show" event because the "expose" event was not emitted in all
	cases (closes #202); Redraw on family-* signals too to show for
	example newly added parents.

	* src/PageView.py, src/DataViews/_MediaView.py: Let all list views
	have the same border width

2006-06-18  Don Allingham  <don@gramps-project.org>
	* help/C/gramps-manual.xml: integrate into a single doc
	* help/C/figures/*.png: updated images

2006-06-18  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/__init__.py: Add WinMime
	* src/Mime/_WinMime.py: Added
	* src/Utils.py: make launch work in Windows
	* src/docgen/*: use Utils.launch to start external viewers
	* src/images/ped24.ico: add icon

2006-06-17  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPerson.py: select given name field if the
	surname field is already defined
	* src/Selectors/_BaseSelector.py (BaseSelector.run): handle
	delete event
	* src/DataViews/_RelationView.py: remove debug statement
	* src/DataViews/__init__.py: remove map view for time being
